--- a/NewOneRamkrishna/Web.config
+++ b/NewOneRamkrishna/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="con" connectionString="Data Source=DESKTOP-HRU3G94;Initial Catalog=Employee;User ID=sa;Password=ideal321" providerName="System.Data,SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
